--- a/templates-hidden/include.html
+++ b/templates-hidden/include.html
@@ -1,3 +1,9 @@
-<div>
-	<span data-css="footer *" data-lift="xform">This is my blog (c) 2012 by me</span>
+<span data-css="footer *" data-lift="xform"><a href="http://liftweb.net">Lift</a> powered, <a href="https://telegr.am">Telegram</a> hosted</span>
+
+<span data-lift="xform" data-css="#main_content_place [class+]">row</span>
+<span data-lift="xform" data-css="#left_side [class+]">span10</span>
+<span data-lift="xform" data-css="#right_side [class+]">span6</span>
+<div data-lift="xform" data-css="#right_side *+">
+  <span data-lift="twitter?user=liftweb">
 </div>
+
